--- a/vcpkg-configuration.json
+++ b/vcpkg-configuration.json
@@ -5,6 +5,9 @@
         "baseline": "66a252f70eebdd744c02d7ab8c1cc6fe123c70ee"
     },
     "overlay-ports": [
-        "./overlay"
+        "overlay/ports"
+    ],
+    "overlay-triplets": [
+        "overlay/triplets"
     ]
 }
