fix(vcpkg):revert remote; update style

--- a/overlay/ports/vanillastyle/CMakeLists.txt
+++ b/overlay/ports/vanillastyle/CMakeLists.txt
@@ -1,6 +1,17 @@
 find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Core Widgets Svg)
 find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Core Widgets Svg)
+
+add_library(${PROJECT_NAME} SHARED)
+
+include(GNUInstallDirs)
+set(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
+#include(Package)
 find_package(nlohmann_json CONFIG REQUIRED)
+set(nlohmann-json_IMPLICIT_CONVERSIONS OFF)
+target_link_libraries(${PROJECT_NAME}
+    PRIVATE
+    nlohmann_json::nlohmann_json
+)
 
 set(SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src)
 set(INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/include)
@@ -21,86 +32,44 @@ set(RESOURCES
     ${RESOURCE_DIR}/VanillaStyleRobotoFont.qrc
     $<$<PLATFORM_ID:Windows>:${RESOURCE_DIR}/VanillaStyleFont.qrc>
 )
-set(LIBRARY_NAME VanillaStyle)
 
-add_library(${LIBRARY_NAME} SHARED)
 target_sources(
-    ${LIBRARY_NAME}
+    ${PROJECT_NAME}
     PRIVATE
     ${SRC}
     ${RESOURCES}
     ${HEADER}
 )
 
-target_link_libraries(${LIBRARY_NAME}
+target_link_libraries(${PROJECT_NAME}
     PUBLIC
     Qt${QT_VERSION_MAJOR}::Core
     Qt${QT_VERSION_MAJOR}::Widgets
     Qt${QT_VERSION_MAJOR}::Svg
-    PRIVATE
-    nlohmann_json::nlohmann_json
 )
 
 target_include_directories(
-    ${LIBRARY_NAME}
+    ${PROJECT_NAME}
     PUBLIC
-    $<INSTALL_INTERFACE:include>
-    $<BUILD_INTERFACE:${INCLUDE_DIR}>
+    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
+    $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>
 )
 
 set_target_properties(
-    ${LIBRARY_NAME}
+    ${PROJECT_NAME}
     PROPERTIES
     AUTOMOC ON
     AUTORCC ON
-    OUTPUT_NAME ${LIBRARY_NAME}
-    PROJECT_LABEL ${LIBRARY_NAME}
+    OUTPUT_NAME ${PROJECT_NAME}
+    PROJECT_LABEL ${PROJECT_NAME}
     SOVERSION ${PROJECT_VERSION_MAJOR}
     VERSION ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}
     IMPORTED_CONFIGURATIONS "RELEASE;DEBUG"
     DEBUG_POSTFIX _debug
     WINDOWS_EXPORT_ALL_SYMBOLS ON
+    PUBLIC_HEADER "${HEADER}"
 )
 
-install(TARGETS ${LIBRARY_NAME}
-    EXPORT ${LIBRARY_NAME}Targets
-    LIBRARY DESTINATION lib
-    ARCHIVE DESTINATION lib
-    RUNTIME DESTINATION bin
-    INCLUDES DESTINATION include
-)
+target_compile_definitions(${PROJECT_NAME} PRIVATE VANILLA_LIBRARY)
 
-# install headers
-install(DIRECTORY include/ DESTINATION include)
-
-include(CMakePackageConfigHelpers)
-
-# add version file
-write_basic_package_version_file(
-    ${CMAKE_BINARY_DIR}/${LIBRARY_NAME}ConfigVersion.cmake
-    VERSION ${PROJECT_VERSION}
-    COMPATIBILITY AnyNewerVersion
-)
-
-# export cmake target files
-export(EXPORT ${LIBRARY_NAME}Targets
-    FILE ${CMAKE_BINARY_DIR}/${LIBRARY_NAME}Targets.cmake
-)
-
-configure_package_config_file(${CMAKE_CURRENT_SOURCE_DIR}/cmake/${LIBRARY_NAME}Config.cmake.in
-    ${CMAKE_BINARY_DIR}/${LIBRARY_NAME}Config.cmake
-    INSTALL_DESTINATION lib/cmake/${LIBRARY_NAME}
-)
-
-install(EXPORT ${LIBRARY_NAME}Targets
-    FILE ${LIBRARY_NAME}Targets.cmake
-    NAMESPACE ${LIBRARY_NAME}::
-    DESTINATION lib/cmake/${LIBRARY_NAME}
-)
-
-# Install version and config files
-install(FILES
-    ${CMAKE_BINARY_DIR}/${LIBRARY_NAME}Config.cmake
-    ${CMAKE_BINARY_DIR}/${LIBRARY_NAME}ConfigVersion.cmake
-    DESTINATION lib/cmake/${LIBRARY_NAME}
-)
+include(Installing)
