--- a/.github/workflows/ci-macos.yml
+++ b/.github/workflows/ci-macos.yml
@@ -25,40 +25,27 @@ jobs:
         qt_modules: [qtwebengine]
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
         with:
-          fetch-depth: 1
+          submodules: true
 
-      - name: Init Submodules
-        shell: bash
-        run: |
-          auth_header="$(git config --local --get http.https://github.com/.extraheader)"
-          git submodule sync --recursive
-          git -c "http.extraheader=$auth_header" -c protocol.version=2 submodule update --init --force --recursive
+      - uses: lukka/get-cmake@latest
 
-      - name: Install Dependencies
-        run: |
-          brew install tree
-
-      - name: Install macdeployqtfix
-        run: |
-          git clone https://github.com/tamlok/macdeployqtfix.git macdeployqtfix --depth=1
-        working-directory: ${{runner.workspace}}
-
-      - name: Cache Qt
-        id: cache-qt
-        uses: actions/cache@v1  # not v2!
+      - name: Setup vcpkg
+        uses: lukka/run-vcpkg@v11
+        id: runvcpkg
         with:
-          path: ../Qt
-          key: ${{ runner.os }}-QtCache-${{ matrix.qt }}
+          vcpkgDirectory: '${{ github.workspace }}/ThirdParty/vcpkg'
+          vcpkgJsonGlob: '${{ github.workspace }}/vcpkg-configuration.json'
 
       - name: Install Qt
-        uses: jurplel/install-qt-action@v3
+        uses: jurplel/install-qt-action@v4
         with:
           version: ${{ matrix.qt }}
+          host: 'mac'
           target: desktop
           modules:  ${{ matrix.qt_modules }}
-          cached: 'true'
+          cache: 'true'
           setup-python: 'false'
 
       - name: Configure CMake
